# k8s

./: README.md  clean_k8s.yaml  error.md  initial_script.sh  inventory.yaml
openstack-helm-infra/prometheus/: Chart.yaml
zuul-jobs/: .ansible-lint  .gitreview  .yamllint  CONTRIBUTING.rst  bindep.txt  linters-requirements.txt  setup.py  test-requirements.txt  tox.ini
zuul-jobs/doc/: requirements.txt
zuul-jobs/test-playbooks/: dstat-graph.yaml  encrypt-file.yaml  ensure-docker.yaml  ensure-java.yaml  ensure-nox.yaml  ensure-poetry.yaml  ensure-python-pyenv-python-version.yaml  ensure-python-pyenv.yaml  ensure-tox.yaml  ensure-zookeeper.yaml  generate-zuul-manifest.yaml  intercept-job.yaml  local-log-download.yaml  run-logjuicer.yaml  simple-role-test.yaml  stage-output.yaml  update-json-file.yaml  upload-git-mirror.yaml  upload-logs-s3.yaml
zuul-jobs/tools/: check_jobs_documented.py  update-test-platforms.py
zuul-jobs/tools/dummy-package/: README.rst  setup.cfg
zuul-jobs/tools/dummy-package/dummy_package/: __init__.py
zuul-jobs/util-tasks/: README  run-docker-registry.yaml
zuul-jobs/zuul-tests.d/: build-roles-jobs.yaml  cloud-roles-jobs.yaml  container-roles-jobs.yaml  dhall.yaml  diskimage-builder-roles.yaml  general-roles-jobs.yaml  go-jobs.yaml  haskell.yaml  helm-jobs.yaml  java-jobs.yaml  jobs.yaml  js-roles-jobs.yaml  launchpad-roles-jobs.yaml  logs-jobs.yaml  nim-jobs.yaml  packer-jobs.yaml  project.yaml  puppet-roles-jobs.yaml  python-jobs.yaml  python-roles-jobs.yaml  rust-jobs.yaml  terraform-jobs-roles.yaml  test-constraints.txt
(+754 files in other folders)
